# amplifier-module-provider-huggingface

./: .gitignore  LICENSE  README.md  pyproject.toml
amplifier_module_provider_huggingface/: __init__.py
tests/: conftest.py  test_behavioral.py  test_validation.py
