[project]
name = "amplifier-module-provider-huggingface"
version = "1.0.0"
description = "HuggingFace Inference API provider module for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Microsoft MADE:Explorations Team" }]
dependencies = [
    "huggingface_hub>=0.25.0",
]

[project.entry-points."amplifier.modules"]
provider-huggingface = "amplifier_module_provider_huggingface:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_provider_huggingface"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
